--- a/tips-ar.html
+++ b/tips-ar.html
@@ -754,14 +754,14 @@
           <div class="content">
             <div class="info">
               <p>
-                (باستخدام رمزك الترويجي يقدرعميلك يحصل على خصم إضافي على العروض
+                باستخدام رمزك الترويجي يقدرعميلك يحصل على خصم إضافي على العروض
                 الحالية المتوفرة على متجرنا الإلكتروني! و اذا مافي خصم عالموقع
                 يقدر يحصل على خصم طوال السنة باستخدام رمزك الترويجي
               </p>
               <div class="cta">
                 <a href="imgs/promo-code.jpg" target="_blank" download
-                  >تحميل الصورة</a
-                >
+                  >تحميل
+                </a>
               </div>
             </div>
             <div class="disting-img">
@@ -814,8 +814,8 @@
                     </h4>
                     <div class="cta">
                       <a href="imgs/communi-full.jpg" target="_blank" download
-                        >تحميل الصورة</a
-                      >
+                        >تحميل
+                      </a>
                     </div>
                   </div>
                   <div class="tolly-img img-full">
@@ -845,8 +845,8 @@
                     <h4>أنشر و شارك الملصقات أدناه مع عملائك.</h4>
                     <div class="cta">
                       <a href="imgs/promo.jpg" target="_blank" download
-                        >تحميل الصورة</a
-                      >
+                        >تحميل
+                      </a>
                     </div>
                   </div>
                   <div class="tolly-img">
@@ -887,17 +887,6 @@
               <input type="radio" name="rdo" id="opt4" class="hidden" />
               <span class="label"></span>واتس أب
             </label>
-          </div>
-          <div class="form__group field">
-            <input
-              type="input"
-              class="form__field"
-              placeholder="غيرها"
-              name="name"
-              id="name"
-              required
-            />
-            <label for="name" class="form__label">غيرها</label>
           </div>
           <div class="sub-bn">
             <button class="suby">إرسال</button>
