--- a/tips.html
+++ b/tips.html
@@ -699,11 +699,11 @@
               Share your promo code with your customers to offer them addtional
               saving on top of existing discounts.
               <br />
-              Download this visual to promote your Promo Code.
+              Download this ad to promote the offer with your Promo Code.
             </p>
             <div class="cta">
               <a href="imgs/promo-code.jpg" target="_blank" download
-                >Download ad</a
+                >Download</a
               >
             </div>
           </div>
@@ -751,11 +751,11 @@
                 <div class="info spec">
                   <h4>
                     Use this visual to show your customers how to use your promo
-                    code.
+                    codeon YORK online store.
                   </h4>
                   <div class="cta">
                     <a href="imgs/communi-full.jpg" target="_blank" download
-                      >Download Visual</a
+                      >Download</a
                     >
                   </div>
                 </div>
@@ -787,7 +787,7 @@
                   <h4>Use this visual to promote your promo code.</h4>
                   <div class="cta">
                     <a href="imgs/promo.jpg" target="_blank" download
-                      >Download Visual</a
+                      >Download</a
                     >
                   </div>
                 </div>
@@ -828,17 +828,6 @@
               <input type="radio" name="rdo" id="opt4" class="hidden" />
               <span class="label"></span>Phone call
             </label>
-          </div>
-          <div class="form__group field">
-            <input
-              type="input"
-              class="form__field"
-              placeholder="Other"
-              name="name"
-              id="name"
-              required
-            />
-            <label for="name" class="form__label">Other</label>
           </div>
           <div class="sub-bn">
             <button class="suby">Submit</button>
