--- a/expro-ar.html
+++ b/expro-ar.html
@@ -35,32 +35,17 @@
             </div>
             <div class="sub-nav">
               <button class="subnavbtn">
-                <a class="goo" data-scroll="kash-head">ما هو برنامج كاش؟</a>
+                <a href="tips-ar.html" target="_blank">النصائح والحيل</a>
               </button>
             </div>
             <div class="sub-nav">
               <button class="subnavbtn">
-                <a class="goo" data-scroll="works-head">كيف انضم؟</a>
+                <a href="faq.html" target="_blank">أسئلة متكرر</a>
               </button>
             </div>
             <div class="sub-nav">
               <button class="subnavbtn">
-                <a class="goo" data-scroll="in-head">لماذا انضم؟</a>
-              </button>
-            </div>
-            <div class="sub-nav">
-              <button class="subnavbtn">
-                <a class="goo" data-scroll="am-head">هل انا مؤهل؟</a>
-              </button>
-            </div>
-            <div class="sub-nav">
-              <button class="subnavbtn">
-                <a class="goo" data-scroll="faq-head">أسئلة متكرر</a>
-              </button>
-            </div>
-            <div class="sub-nav">
-              <button class="subnavbtn">
-                <a class="goo" data-scroll="contact-head"> اتصل بنا</a>
+                <a href="contact.html" target="_blank"> اتصل بنا</a>
               </button>
             </div>
             <div class="sub-nav">
@@ -143,19 +128,19 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link goo" data-scroll="works-head"> كيف انضم؟</a>
+              <a class="nav-link" href="tips-ar.html" target="_blank"
+                >النصائح والحيل
+              </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link goo" data-scroll="in-head"> لماذا انضم؟</a>
+              <a class="nav-link" href="faq.html" target="_blank">
+                أسئلة متكرر
+              </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link goo" data-scroll="am-head"> هل انا مؤهل؟</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link goo" data-scroll="faq-head"> أسئلة متكرر </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link goo" data-scroll="contact-head"> اتصل بنا</a>
+              <a class="nav-link" href="contact.html" target="_blank">
+                اتصل بنا</a
+              >
             </li>
             <li class="nav-item">
               <a
