--- a/faq.html
+++ b/faq.html
@@ -35,32 +35,17 @@
             </div>
             <div class="sub-nav">
               <button class="subnavbtn">
-                <a class="goo" data-scroll="kash-head">What is Kash Program?</a>
+                <a href="tips.html" target="_blank">Tips & Tricks</a>
               </button>
             </div>
             <div class="sub-nav">
               <button class="subnavbtn">
-                <a class="goo" data-scroll="works-head">How it works?</a>
+                <a href="faq.html" target="_blank">FAQ</a>
               </button>
             </div>
             <div class="sub-nav">
               <button class="subnavbtn">
-                <a class="goo" data-scroll="in-head">What's in it for you?</a>
-              </button>
-            </div>
-            <div class="sub-nav">
-              <button class="subnavbtn">
-                <a class="goo" data-scroll="am-head">Am I Eligible?</a>
-              </button>
-            </div>
-            <div class="sub-nav">
-              <button class="subnavbtn">
-                <a class="goo" data-scroll="faq-head">FAQ</a>
-              </button>
-            </div>
-            <div class="sub-nav">
-              <button class="subnavbtn">
-                <a class="goo" data-scroll="contact-head">Contact Us</a>
+                <a href="contact.html" target="_blank">Contact Us</a>
               </button>
             </div>
             <div class="sub-nav">
@@ -80,7 +65,7 @@
               </button>
             </div>
             <div class="sub-nav">
-              <button class="subnavbtn">
+              <button class="subnavbtn cta">
                 <a href="https://kash.york.com.sa/login" target="_blank"
                   >Sign in</a
                 >
@@ -138,28 +123,17 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link goo" data-scroll="kash-head">
-                What is Kash Program?
+              <a class="nav-link" href="tips.html" target="_blank">
+                Tips & Tricks
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link goo" data-scroll="works-head">
-                How it works?</a
+              <a class="nav-link" href="faq.html" target="_blank"> FAQ </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html" target="_blank">
+                Contact Us</a
               >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link goo" data-scroll="in-head">
-                What's in it for you?</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link goo" data-scroll="am-head"> Am I Eligible?</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link goo" data-scroll="faq-head"> FAQ </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link goo" data-scroll="contact-head"> Contact Us</a>
             </li>
             <li class="nav-item">
               <a
