--- a/tips-ar.html
+++ b/tips-ar.html
@@ -36,6 +36,36 @@
               </div>
               <div class="sub-nav">
                 <button class="subnavbtn">
+                  <a href="https://muhammado07.github.io/expro/expro.html"
+                    >عن برنامج كاش</a
+                  >
+                  <img src="img/icon-caret.svg" alt="caret icon" />
+                </button>
+                <div class="sub-content">
+                  <ul class="link">
+                    <li>
+                      <a
+                        href="https://muhammado07.github.io/expro/expro.html#works-head"
+                        >كيف انضم؟</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href="https://muhammado07.github.io/expro/expro.html#in-head"
+                        >لماذا انضم؟</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href="https://muhammado07.github.io/expro/expro.html#am-head"
+                        >هل أنا مؤهل؟</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="sub-nav">
+                <button class="subnavbtn">
                   <a href="tips-ar.html" target="_blank">النصائح والحيل</a>
                 </button>
               </div>
@@ -123,10 +153,42 @@
                   عن يورك
                 </a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link goo" data-scroll="kash-head">
-                  ما هو برنامج كاش؟
-                </a>
+              <li class="nav-item nav-expand">
+                <a class="nav-link nav-expand-link" href="#"> عن برنامج كاش </a>
+                <ul class="nav-items nav-expand-content">
+                  <li class="nav-item">
+                    <a
+                      class="nav-link"
+                      href="https://muhammado07.github.io/expro/expro.html"
+                    >
+                      <b>عن برنامج كاش</b>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a
+                      class="nav-link"
+                      href="https://muhammado07.github.io/expro/expro.html#works-head"
+                    >
+                      كيف انضم؟
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a
+                      class="nav-link"
+                      href="https://muhammado07.github.io/expro/expro.html#in-head"
+                    >
+                      لماذا انضم؟
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a
+                      class="nav-link"
+                      href="https://muhammado07.github.io/expro/expro.html#am-head"
+                    >
+                      هل أنا مؤهل؟
+                    </a>
+                  </li>
+                </ul>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="tips-ar.html" target="_blank"
