--- a/faq.html
+++ b/faq.html
@@ -35,6 +35,36 @@
             </div>
             <div class="sub-nav">
               <button class="subnavbtn">
+                <a href="https://muhammado07.github.io/expro/expro.html"
+                  >About KASH</a
+                >
+                <img src="img/icon-caret.svg" alt="caret icon" />
+              </button>
+              <div class="sub-content">
+                <ul class="link">
+                  <li>
+                    <a
+                      href="https://muhammado07.github.io/expro/expro.html#works-head"
+                      >How it works?</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://muhammado07.github.io/expro/expro.html#in-head"
+                      >What's in it for you?</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://muhammado07.github.io/expro/expro.html#am-head"
+                      >Am I Eligible?</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="sub-nav">
+              <button class="subnavbtn">
                 <a href="tips.html" target="_blank">Tips & Tricks</a>
               </button>
             </div>
@@ -121,6 +151,43 @@
               >
                 About York
               </a>
+            </li>
+            <li class="nav-item nav-expand">
+              <a class="nav-link nav-expand-link" href="#"> About KASH </a>
+              <ul class="nav-items nav-expand-content">
+                <li class="nav-item">
+                  <a
+                    class="nav-link"
+                    href="https://muhammado07.github.io/expro/expro.html"
+                  >
+                    <b>About KASH</b>
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a
+                    class="nav-link"
+                    href="https://muhammado07.github.io/expro/expro.html#works-head"
+                  >
+                    How it works?
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a
+                    class="nav-link"
+                    href="https://muhammado07.github.io/expro/expro.html#in-head"
+                  >
+                    What's in it for you?
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a
+                    class="nav-link"
+                    href="https://muhammado07.github.io/expro/expro.html#am-head"
+                  >
+                    Am I Eligible?
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="tips.html" target="_blank">
