--- a/tips-ar.html
+++ b/tips-ar.html
@@ -66,7 +66,7 @@
               </div>
               <div class="sub-nav">
                 <button class="subnavbtn">
-                  <a href="tips-ar.html" target="_blank">النصائح والحيل</a>
+                  <a href="tips-ar.html">النصائح والحيل</a>
                 </button>
               </div>
               <div class="sub-nav">
@@ -191,9 +191,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="tips-ar.html" target="_blank"
-                  >النصائح والحيل
-                </a>
+                <a class="nav-link" href="tips-ar.html">النصائح والحيل </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="faq.html" target="_blank">
