--- a/tips.html
+++ b/tips.html
@@ -65,7 +65,7 @@
             </div>
             <div class="sub-nav">
               <button class="subnavbtn">
-                <a href="tips.html" target="_blank">Tips & Tricks</a>
+                <a href="tips.html">Tips & Tricks</a>
               </button>
             </div>
             <div class="sub-nav">
@@ -190,9 +190,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="tips.html" target="_blank">
-                Tips & Tricks
-              </a>
+              <a class="nav-link" href="tips.html"> Tips & Tricks </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="faq.html" target="_blank"> FAQ </a>
